# voilt

./: .gitignore  pyproject.toml
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Dashboard.tsx  table.tsx
dashboard/src/services/: violationsService.ts
edge/: detector.py  runner.py  tracker_engine.py
scripts/: train.py
server/: app.py
server/api/: ingest.py  process.py
server/configs/: config.py
server/core/: config.py
server/db/: connection.py  crud.py  migrations.py
server/routers/: violations.py
server/services/: falcon_engine.py  storage.py  verification.py  verification_pipeline.py  vision.py
server/worker/: queue.py
tests/: test_server_ingest.py  test_verification_pipeline.py
