[project]
name = "voilt"
version = "0.1.0"
description = "Edge to backend traffic violation detection pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "opencv-python>=4.11.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "sqlalchemy>=2.0.39",
  "ultralytics>=8.4.22",
  "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.0",
  "ruff>=0.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"server/app.py" = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
